Allow toggling the base station mapping.

--- a/assets/leaflet.html
+++ b/assets/leaflet.html
@@ -32,15 +32,33 @@ var zoom = 12;
 var oldspeed = 0;
 var pmarker = null;
 
+var sensorly = L.tileLayer('http://tiles3.api.sensorly.com/tile/web/lte_310sprint/{z}/{x}/{x}/{y}/{y}.png?s=512',
+{maxZoom: 18, tileSize: 512, attribution: '&copy; <a href="http://www.sensorly.com/">Sensorly</a>.'});
+
+var mapquest = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpg',
+{maxZoom: 18, subdomains: "1234", attribution: 'Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>. Tiles Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">'});
+
+var mqaerial = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/sat/{z}/{x}/{y}.jpg',
+{maxZoom: 18, subdomains: "1234", attribution: 'Portions Courtesy <a href="http://www.nasa.gov/">NASA</a>/<a href="http://www.jpl.nasa.gov/">JPL-Caltech</a> and <a href="http://www.fsa.usda.gov/">USDA Farm Service Agency</a>. Tiles Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">'});
+
+var baseLayers = {'Mapquest Open' : mapquest,
+  'Mapquest Aerial' : mqaerial};
+var overlays = {'Sensorly' : sensorly};
+
 function startmap(lat, lon, newzoom) {
   zoom = newzoom;
-  map = L.map('map', {center: [lat, lon], zoom: zoom});
+  map = L.map('map', {center: [lat, lon],
+   fadeAnimation: false,
+   zoomAnimation: false,
+   // markerZoomAnimation: false,
+   zoom: zoom
+  });
 
-  L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpg',
-{maxZoom: 18, subdomains: "1234", attribution: 'Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>. Tiles Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">'}).addTo(map);
+  mapquest.addTo(map);
+  L.control.layers(baseLayers, overlays).addTo(map);
 }
 
-var padding = 0.2;
+var padding = 0.15;
 
 function recenter(lat, lon, radius, speed) {
   newZoom = 14-Math.floor(Math.log((speed*3.6)+0.1)/Math.LN10);
@@ -70,6 +88,8 @@ function recenter(lat, lon, radius, speed) {
 }
 
 function placeMarker(lat, lon) {
+  if(!map) return;
+
   if(!pmarker) {
     pmarker = L.marker([lat, lon], {title: "1X Base Station"});
     pmarker.addTo(map);
@@ -80,6 +100,13 @@ function placeMarker(lat, lon) {
 
   bounds = L.latLngBounds([marker.getLatLng(), pmarker.getLatLng()]).pad(padding);
   map.fitBounds(bounds);
+}
+
+function clearMarker() {
+  if(!map || !pmarker) return;
+
+  map.removeLayer(pmarker);
+  pmarker = null;
 }
 </script>
 </body>
