see if disabling 3D transforms fixes HTC issues

--- a/assets/leaflet.html
+++ b/assets/leaflet.html
@@ -19,6 +19,7 @@ html, body, #map {
 }
 </style>
 
+<script>L_DISABLE_3D = true; // Crashy on HTC devices</script>
 <script src="leaflet/leaflet.js"></script>
 <script src="leaflet/Marker.Rotate.js"></script>
 </head>
