--- a/assets/leaflet.html
+++ b/assets/leaflet.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
-<meta name="viewport" content="target-densitydpi=160,
-                               width=device-width, initial-scale=1.0,
+<meta name="viewport" content="width=device-width, initial-scale=1.0,
                                maximum-scale=1.0, user-scalable=no" />
 
 <link rel="stylesheet" href="leaflet/leaflet.css" />
