--- a/assets/leaflet.html
+++ b/assets/leaflet.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0,
-                               maximum-scale=1.0, user-scalable=no" />
+                               maximum-scale=1.0, user-scalable=no">
 
-<link rel="stylesheet" href="leaflet/leaflet.css" />
-<!--[if lte IE 8]>
-    <link rel="stylesheet" "leaflet/leaflet.ie.css" />
-<![endif]-->
+<link rel="stylesheet" href="leaflet/leaflet.css">
 
 <style>
 body {
