--- a/assets/leaflet.html
+++ b/assets/leaflet.html
@@ -12,6 +12,7 @@ body {
 }
 html, body, #map {
     height: 100%;
+    background-color: white;
 }
 </style>
 
@@ -23,4 +24,5 @@ html, body, #map {
 <body>
 <div id="map"></div>
 <script src="sigmap.js"></script>
+<!--<script>startmap(32.81,-83.73,13,"");</script>-->
 </body>
